feat: 完成P1需求 — AI文生图/风格迁移/隐形水印，修复多项bug
新增功能：
- AI文生图（TextToImageController + TextToImagePage + 异步轮询）
- 风格迁移StyleTransferController + StyleTransfer组件）
- 前端隐形水印（Canvas LSB隐写术，嵌入/提取双标签页）
- TinEye以图搜图（ImageSearchApiFacade组件化，provider可切换）
- 向量批量重索引（/reindex端点 + 前端按钮）

Bug修复：
- 修复文生图/风格迁移NPE（Input/Parameters未初始化）
- 修复deletePicture缺少MySQL删除
- 修复/picture/search/picture缺少空间权限校验
- 修复embedding API响应解析（顶层data→output）
- 修复reindexAllPictures失败计数始终为0
- 修复临时文件异常时未清理、VectorSearchModal重复API调用
- 修复Blob URL内存泄漏、中文拼写错误
- 清理未使用导入/变量，添加AI参数白名单校验